--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
             </form>
             <div class="contact-info">
               <h3>Contact information</h3>
-              <p><span> Addresss:</span> Hamburgerstr 88, 23843 Bad Oldesloe</p>
-              <p><span> Phone:</span> 015213331433</p>
+              <p><span> Addresss:</span> Hamburgerstr, 23843 Bad Oldesloe</p>
+              <!-- <p><span> Phone:</span> 015213331433</p> -->
               <p><span>Email:</span> rabi.sanaye@yahoo.com</p>
-              <p><span>Website:</span> www.rabi.sanaye.com</p>
+              <p><span>Website:</span> www.srabi.net</p>
             </div>
           </div>
         </div>
