--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
               </form>
               <div class="contact-info">
                 <h3>Contact information</h3>
-                <p><span> Addresss:</span> Hamburgerstr, 23843 Bad Oldesloe</p>
+                <p>
+                  <span> Address:</span> Reimer Hanserstr 20, 23843 Bad Oldesloe
+                </p>
                 <!-- <p><span> Phone:</span> 015213331433</p> -->
                 <p><span>Email:</span> rabi.sanaye@yahoo.com</p>
                 <p><span>Website:</span> www.srabi.net</p>
