--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
               <div class="contact-info">
                 <h3>Contact information</h3>
                 <p>
-                  <span> Address:</span> Reimer Hanserstr 20, 23843 Bad Oldesloe
+                  <span> Address:</span> Reimer Hanserstr, 23843 Bad Oldesloe
                 </p>
                 <!-- <p><span> Phone:</span> 015213331433</p> -->
                 <p><span>Email:</span> rabi.sanaye@yahoo.com</p>
