about me section updated

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2 class="animated-text">I'm a <span class="auto-type"></span></h2>
         </div>
         <div class="home-img">
-          <img src="/assets/rabi.jpg" alt="rabi-photo" />
+          <img src="./assets/rabi.jpg" alt="rabi-photo" />
         </div>
         <a href="#about-me">
           <div class="spinner-wrapper">
@@ -95,9 +95,11 @@
             up-to-date with the latest web development trends and technologies,
             always eager to learn and grow in my craft.
           </p>
+          <div class="react-section"></div>
         </div>
         <div class="about-me-img">
-          <img src="/assets/2.jpg" alt="" class="about-img" />
+          <img src="./assets/2.jpg" alt="" class="about-img1" />
+          <img src="./assets/about.jpeg" alt="" class="about-img2" />
         </div>
       </section>
 
@@ -206,6 +208,10 @@
       defer
       type="text/javascript"
     ></script>
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="module" src="script.js"></script>
+    <script type="text/babel" src="singlePage.js"></script>
   </body>
 </html>
