dac web add to projects

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 <div class="modal-info">
                   <h3>Project Info</h3>
                   <p class="details"></p>
+                  <p id="projectLink"></p>
                   <h3>Project Detail</h3>
                   <p>Technologies: <span class="tech"></span></p>
                   <p>Date: <span class="date"></span></p>
