meta tag modified

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
-      name="keywords"
-      content="frontend developer, web designing, Rabi, portfolio, "
+      name="description"
+      content="Rabi Sanaye's portfolio website showcasing frontend development and web design projects. Explore Rabi's work and skills."
     />
-
-    <title>Rabi Portfolio</title>
+    <meta
+      name="keywords"
+      content="frontend developer, web design, portfolio, Rabi Sanaye, Rabi"
+    />
+    <title>Rabi Sanaye's Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
